--- a/import-font.css
+++ b/import-font.css
@@ -3,5 +3,5 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("https://github.com/LittleWhole/filedump/blob/master/zh-cn.woff?raw=true") format('woff2');
+  src: url("https://github.com/LittleWhole/filedump/blob/master/zh-cn.woff?raw=true") format('woff');
 }
